[package]
name = "advent-2020"
version = "0.1.0"
authors = ["Will Crozier <willcrozi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"

[[bin]]
name = "main_01"
path = "src/main_01.rs"

[[bin]]
name = "main_02"
path = "src/main_02.rs"

[[bin]]
name = "main_03"
path = "src/main_03.rs"

[[bin]]
# requires nightly (`cargo +nightly run` etc.) due to use of str::split_once
name = "main_04"
path = "src/main_04.rs"