[package]
name = "advent-2020"
version = "0.1.0"
authors = ["Will Crozier <willcrozi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"

# requires nightly (`cargo +nightly run` etc.) due to use of str::split_once
[lib]
name = "advent_2020"
path = "src/lib.rs"

[[bin]]
name = "main_01"
path = "src/main_01.rs"

[[bin]]
name = "main_02"
path = "src/main_02.rs"

[[bin]]
name = "main_03"
path = "src/main_03.rs"

[[bin]]
name = "main_04"
path = "src/main_04.rs"

[[bin]]
name = "main_05"
path = "src/main_05.rs"

[[bin]]
name = "main_06"
path = "src/main_06.rs"

[[bin]]
name = "main_07"
path = "src/main_07.rs"

[[bin]]
name = "main_08"
path = "src/main_08.rs"

[[bin]]
name = "main_09"
path = "src/main_09.rs"
