[package]
name = "advent-2020"
version = "0.1.0"
authors = ["Will Crozier <willcrozi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"

# requires nightly (`cargo +nightly run` etc.) due to use of str::split_once
[lib]
name = "advent_2020"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

